--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -39,10 +39,13 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Monda:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import "iosevka-seranna-tm26.css";
 
-$content: 'IBM Plex Sans', 'Trebuchet MS', sans-serif;
+$content: 'Iosevka Seranna TM26 Web', 'Trebuchet MS', sans-serif;
+$navi: 'Monda', Arial, Helvetica, sans-serif;
 $header1: 'Monda', Arial, Helvetica, sans-serif;
 $header2: 'PT Sans', Arial, Helvetica, sans-serif;
+$tagline: 'PT Sans', 'Trebuchet MS', sans-serif;
 
 /* [STCL] Styling Colours */
 
@@ -181,7 +184,7 @@ div.image-header {
 /* [NAVI] Navigation Bar */
 
 .mainNavi {
-  font-family: $header1;
+  font-family: $navi;
   font-size: 18px;
   position: sticky;
   top: 0;
@@ -328,7 +331,7 @@ h2 {
 }
 
 .tagline {
-  font-family: 'PT Sans', 'Trebuchet MS', Arial;
+  font-family: $header2, 'Trebuchet MS', Arial;
   display: block;
   margin: 0.83em 0 0.83em;
   font-size: 1.5rem;
@@ -522,7 +525,7 @@ $uoft: #7ba4d9;
 /* [COFI] Figure Captions */
 
 .figure-caption {
-  font-family: $header2;
+  font-family: $content;
   font-size: 1rem;
   margin: 4px auto 4px auto;
   text-align: center;
