--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -597,9 +597,19 @@ a:active {
 .personal-work-container {
   background-color: $vampireBlack;
   border: 2px solid $blue;
+  border-radius: 12px;
   display: flex;
   flex-direction: row;
+  cursor: pointer;
   min-width: 550px;
+  margin: 40px 0;
+
+  transition: 0.4s;
+}
+
+.personal-work-container:hover {
+  border: 2px solid $pink1;
+  transition: 0.4s;
 }
 
 .personal-work-screenshot {
@@ -611,8 +621,6 @@ a:active {
 }
 
 .personal-work-info-container {
-  background-color: $hoverBlack;
-  border: 2px solid $pink1;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -620,9 +628,9 @@ a:active {
 }
 
 .personal-work-info-divider {
-  border-bottom: 5px solid $blue;
+  border-bottom: 2px solid white;
   margin: 30px 0 30px 0;
-  width: 80%;
+  width: 85%;
 }
 
 .personal-work-info-title {
