Updated content and styling for aboue-me page

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -48,7 +48,7 @@ $header1: 'Iosevka Seranna TM10 Web', Arial, Helvetica, sans-serif;
 $header2: 'Iosevka Seranna TM10 Web', Arial, Helvetica, sans-serif;
 $content: 'PT Sans', 'Trebuchet MS', sans-serif;
 $code: 'Share Tech Mono', 'Consolas', monospace;
-$tagline: 'PT Sans', 'Trebuchet MS', sans-serif;
+$tagline: 'Iosevka Seranna TM10 Web', 'Share Tech Mono', monospace;
 
 /* [STCL] Styling Colours */
 
