Modified sass style

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -294,7 +294,7 @@ li.dropdown {
 /* ----------------------- */
 
 div.page-title {
-  background-image: linear-gradient($vampireBlack, $carbonBlack);
+  background-color: $carbonBlack;
   border-top: 5px solid $pink1;
   max-width: 1024px;
   margin: 30px auto 30px auto;
@@ -330,7 +330,7 @@ code {
 .content-body {
   font-family: $content;
   font-size: 1.125rem;
-  background-image: linear-gradient($vampireBlack, $carbonBlack);
+  background-color: $vampireBlack;
   border-top: 5px solid $blue;
   display: block;
   margin: 30px auto 30px auto;
@@ -654,7 +654,8 @@ a:active {
 /* [COSB] Skill Box */
 
 .skillbox-container {
-  background-color: $vampireBlack;
+  background-color: $carbonBlack;
+  border-radius: 25px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -704,7 +705,7 @@ a:active {
 }
 
 .skillbox-skill-meter-empty {
-  background-color: #323232;
+  background-color:$vampireBlack;
   margin: 5px;
   padding: 2px;
   width: 80px;
@@ -733,7 +734,7 @@ a:active {
   color: #959595;
   text-align: right;
   margin: 5px;
-  padding: 10px;
+  padding: 10px 10px 10px 30px;
 }
 
 
@@ -742,7 +743,6 @@ a:active {
 /* ------------------- */
 
 .footer-content {
-  background-image: linear-gradient($vampireBlack, $carbonBlack);
   background-color: $carbonBlack;
   border-top: 5px solid $pink1;
   border-top-style: solid;
