--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -623,7 +623,7 @@ a:active {
 /* [COPB] Profile Box */
 
 .profilebox-container {
-  background-color: $vampireBlack;
+  background-color: $carbonBlack;
   border: 2px solid $blue;
   border-radius: 24px;
   display: flex;
