--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -41,12 +41,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Monda:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+Plus+1:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "iosevka-margaret-tm10.css";
 
 $navi: 'Overpass', Arial, Helvetica, sans-serif;
 $header1: 'Iosevka Margaret TM10 Web', Arial, Helvetica, sans-serif;
 $header2: 'Iosevka Margaret TM10 Web', Arial, Helvetica, sans-serif;
-$content: 'Overpass Thin', 'Trebuchet MS', sans-serif;
+$content: 'M Plus 1', 'Trebuchet MS', sans-serif;
 $code: 'Share Tech Mono', 'Consolas', monospace;
 $tagline: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', monospace;
 
@@ -329,7 +330,7 @@ code {
 
 .content-body {
   font-family: $content;
-  font-size: 1.125rem;
+  font-size: 1rem;
   background-color: $vampireBlack;
   border-top: 5px solid $blue;
   display: block;
