--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -42,13 +42,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Monda:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=M+Plus+1:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Assistant:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "iosevka-margaret-tm10.css";
 
 $navi: 'M Plus 1', Arial, Helvetica, sans-serif;
 $header1: 'M Plus 1', Arial, Helvetica, sans-serif;
 $header2: 'M Plus 1', Arial, Helvetica, sans-serif;
-$content: 'Libre Franklin', 'Trebuchet MS', sans-serif;
+$content: 'Assistant', 'Trebuchet MS', sans-serif;
 $code: 'Share Tech Mono', 'Consolas', monospace;
 $tagline: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', monospace;
 
