Added $amber as a new colour to the styling sheet

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -65,6 +65,7 @@ $pink2: #ff5085;
 $green: #9fff50;
 $orange: #ff9f50;
 $yellow: #ffd35c;
+$amber: #ffc800;
 
 /* ---------------------------- */
 /* -= [GLEL] Global Elements =- */
