Renamed pink1 to pink

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -59,7 +59,7 @@ $carbonBlack: #212121;
 $vampireBlack: #141414;
 $midnightBlack: #0a0a0a;
 $hoverBlack: #383838;
-$pink1: #ff46dc;
+$pink: #ff46dc;
 $green: #beff1e;
 $amber: #ffc800;
 
