--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -53,7 +53,7 @@ $tagline: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', monospace;
 
 /* [STCL] Styling Colours */
 
-$blue: #64f0ff;
+$blue: #2ddcff;
 $codeblue: #7cc4ff;
 $carbonBlack: #212121;
 $vampireBlack: #141414;
