--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -164,12 +164,12 @@ tr:nth-child(odd) {
 /* [TXSL] Text Selection */
 
 ::selection {
-  background: $blue; 
+  background: $amber; 
   color: $carbonBlack;
 }
 
 ::-moz-selection {
-  background: $blue;
+  background: $amber;
   color: $carbonBlack;
 }
 
@@ -356,7 +356,7 @@ h3 {
   margin: 0 0 0 0;
   font-family: $header2;
   font-weight: normal;
-  color: $blue;
+  color: $green;
 }
 
 /* [BLQT] Blockquotes */
@@ -706,7 +706,7 @@ a:active {
 }
 
 .skillbox-skill-meter-pt {
-  background-color: $blue;
+  background-color: $amber;
   margin: 5px;
   padding: 2px;
   width: 80px;
@@ -728,7 +728,7 @@ a:active {
 
 .skillbox-skill-legend-label {
   font-size: 12px;
-  color: #959595;
+  color: #acacac;
   text-align: center;
   position: relative;
   top: 5px;
