Modified info on about-me page

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -267,12 +267,12 @@ li.dropdown {
 }
 
 .dropdown-content a {
-  color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
   transition: 0.4s;
+  border-bottom: 4px solid red;
 }
 
 .dropdown:hover .dropdown-content {
