Adjusted colour for dropdown buttons

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -260,7 +260,7 @@ li.dropdown {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: $vampireBlack;
+  background-color: $midnightBlack;
   min-width: 160px;
   transition: 0.4s;
   z-index: 1;
