--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -37,17 +37,17 @@
 
 /* [FOIM] Font Imports */
 
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Monda:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=M+Plus+1:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "iosevka-margaret-tm10.css";
 
-$navi: 'M Plus 1', Arial, Helvetica, sans-serif;
-$header1: 'M Plus 1', Arial, Helvetica, sans-serif;
-$header2: 'M Plus 1', Arial, Helvetica, sans-serif;
-$content: 'Arimo', 'Trebuchet MS', Helvetica, sans-serif;
+$navi: 'Barlow', Arial, Helvetica, sans-serif;
+$header1: 'Barlow', Arial, Helvetica, sans-serif;
+$header2: 'Barlow', Arial, Helvetica, sans-serif;
+$content: 'Barlow', 'Trebuchet MS', Helvetica, sans-serif;
 $code: 'Iosevka Margaret TM10 Web', 'Consolas', monospace;
 $tagline: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', monospace;
 
@@ -653,7 +653,7 @@ a:active {
 }
 
 .profilebox-name {
-  font-family: 'M Plus 1', 'Consolas', Arial;
+  font-family: $content;
   font-size: 24px;
   color: $amber;
 }
