Added Share Tech Mono as an alt font for code style

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -45,7 +45,7 @@ $navi: 'Overpass', Arial, Helvetica, sans-serif;
 $header1: 'Overpass', Arial, Helvetica, sans-serif;
 $header2: 'Overpass', Arial, Helvetica, sans-serif;
 $content: 'Overpass', 'Trebuchet MS', Helvetica, sans-serif;
-$code: 'Iosevka Margaret TM10 Web', 'Consolas', monospace;
+$code: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', 'Consolas', monospace;
 $tagline: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', monospace;
 
 /* [STCL] Styling Colours */
