--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -38,13 +38,14 @@
 /* [FOIM] Font Imports */
 
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comme:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "iosevka-margaret-tm10.css";
 
 $navi: 'Overpass', Arial, Helvetica, sans-serif;
 $header1: 'Overpass', Arial, Helvetica, sans-serif;
 $header2: 'Overpass', Arial, Helvetica, sans-serif;
-$content: 'Overpass', 'Trebuchet MS', Helvetica, sans-serif;
+$content: 'Comme', 'Trebuchet MS', Helvetica, sans-serif;
 $code: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', 'Consolas', monospace;
 $tagline: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', monospace;
 
