Imported Victor Mono as a font, needs further testing to make sure site works properly with it

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -41,6 +41,7 @@
 @import url('https://fonts.googleapis.com/css2?family=M+Plus+1:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "iosevka-margaret-tm10.css";
+@import "victormono/dist/index.css";
 
 $navi: 'Monda', Arial, Helvetica, sans-serif;
 $header1: 'Monda', Arial, Helvetica, sans-serif;
