Changed header2 font from 'Monda' to 'Barlow'

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -44,7 +44,7 @@
 
 $navi: 'Monda', Arial, Helvetica, sans-serif;
 $header1: 'Monda', Arial, Helvetica, sans-serif;
-$header2: 'Monda', Arial, Helvetica, sans-serif;
+$header2: 'Barlow', Arial, Helvetica, sans-serif;
 $content: 'Barlow', 'Trebuchet MS', Helvetica, sans-serif;
 $code: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', 'Consolas', monospace;
 $tagline: 'Iosevka Margaret TM10 Web', 'Share Tech Mono', monospace;
